Home, stories, article layouts added

--- a/P2/index.html
+++ b/P2/index.html
@@ -20,7 +20,7 @@
             <ul class="menu">
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Stories</a></li>
+                <li><a href="./pages/stories.html">Stories</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -51,7 +51,7 @@
 
         <section>
             <div class="wrap-content">
-                <h2>We bring a new perspective to design and operations</h2>
+                <h2>Engineering consulting and technical services</h2>
             </div>
             <div class="wrap-content two-column">
                 <div>
@@ -110,94 +110,124 @@
                     <img src="./img/perspective.jpg" alt="">
                 </div>
             </div>
-            <div class="wrap-content two-column font-large">
-                <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam quisquam fugit
-                    amet consequatur sequi quos consequuntur officiis doloribus, culpa veritatis necessitatibus tempora
-                    ullam corrupti hic aliquid porro non. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Cupiditate, veritatis!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, voluptate. Assumenda illum a rem.
-                    Expedita, aspernatur molestias est voluptatum consequuntur, iste eaque esse cupiditate minima
-                    blanditiis aliquid minus sint nesciunt fugit doloremque eum ea. Tempora nesciunt atque dolorum alias
-                    aspernatur!</p>
-                <p>Enim voluptatum ipsa vitae, amet tempora adipisicing elit. nobis veniam doloribus animi dolores
-                    quaerat dignissimos iusto impedit commodi, enim asperiores quae excepturi alias explicabo ut
-                    delectus numquam dolor, accusantium voluptate? Possimus aliquam quos ipsa cumque minima obcaecati
-                    vitae, ut voluptate amet accusantium aspernatur repudiandae, excepturi nobis, eaque quae quam
-                    mollitia?</p>
-                <p>Augue condimentum interdum sit pellentesque consectetur adipisicing elit. Error, inventore quisquam eius incidunt illo
-                    quae, tenetur eum magni, ipsum laborum deleniti ad possimus vitae repudiandae cupiditate commodi!
-                    Perferendis voluptates culpa officia. Illo, in, deleniti cupiditate enim dicta tempora doloribus
-                    mollitia cum voluptatum, quisquam officia obcaecati incidunt est vitae voluptates. Voluptate!</p>
-            </div>
 
-        </section>
+            <section>
+                <div class="wrap-content">
+                    <h2>We assist you in the delivering sustainable projects</h2>
+                    <div class="two-column font-large">
+                        <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam
+                            quisquam fugit
+                            amet consequatur sequi quos consequuntur officiis doloribus, culpa veritatis necessitatibus
+                            tempora
+                            ullam corrupti hic aliquid porro non. Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit.
+                            Cupiditate, veritatis!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, voluptate. Assumenda illum a
+                            rem.
+                            Expedita, aspernatur molestias est voluptatum consequuntur, iste eaque esse cupiditate
+                            minima
+                            blanditiis aliquid minus sint nesciunt fugit doloremque eum ea. Tempora nesciunt atque
+                            dolorum
+                            alias
+                            aspernatur!</p>
+                        <p>Enim voluptatum ipsa vitae, amet tempora adipisicing elit. nobis veniam doloribus animi
+                            dolores
+                            quaerat dignissimos iusto impedit commodi, enim asperiores quae excepturi alias explicabo ut
+                            delectus numquam dolor, accusantium voluptate? Possimus aliquam quos ipsa cumque minima
+                            obcaecati
+                            vitae, ut voluptate amet accusantium aspernatur repudiandae, excepturi nobis, eaque quae
+                            quam
+                            mollitia?</p>
+                        <p>Augue condimentum interdum sit pellentesque consectetur adipisicing elit. Error, inventore
+                            quisquam eius incidunt illo
+                            quae, tenetur eum magni, ipsum laborum deleniti ad possimus vitae repudiandae cupiditate
+                            commodi!
+                            Perferendis voluptates culpa officia. Illo, in, deleniti cupiditate enim dicta tempora
+                            doloribus
+                            mollitia cum voluptatum, quisquam officia obcaecati incidunt est vitae voluptates.
+                            Voluptate!
+                        </p>
+                    </div>
 
-        <div class="wrap-content">
-            <div class="bg-gray large-card">
-                <div class="text-black">
-                    <h3>View our latest works</h3>
-                    <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
-                        fermentum.
-                        Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum vitae
-                        sapien
-                        pellentesque. </p>
-                    <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
-                        tellus
-                        id
-                        interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus mattis
-                        molestie a iaculis at erat pellentesque adipiscing.</p>
 
-                    <a href="#">Recent projects ></a>
+                    <div class="bg-gray large-card">
+                        <div class="text-black">
+                            <h3>View our latest works</h3>
+                            <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
+                                fermentum.
+                                Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
+                                vitae
+                                sapien
+                                pellentesque. </p>
+                            <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
+                                tellus
+                                id
+                                interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
+                                mattis
+                                molestie a iaculis at erat pellentesque adipiscing.</p>
+
+                            <a href="#">Recent projects ></a>
+                        </div>
+                        <img src="./img/large-card.jpeg" alt="project site">
+                    </div>
+
                 </div>
-                <img src="./img/large-card.jpeg" alt="project site">
-            </div>
-        </div>
+                </div>
+
+            </section>
 
 
-        <section>
+
+
+            <section>
+                <div class="wrap-content">
+                    <h2>The latest from SEEDA</h2>
+
+                    <div class="article-card-wrapper">
+                        <div class="article-card">
+                            <div>
+                                <h3>Hydraulic ram pump systems</h3>
+                                <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
+                                    pharetra.
+                                </p>
+                                <a href="./pages/hydraulic-ramp.html">Read more ></a>
+                            </div>
+                            <img src="./img/article-1.jpg" alt="">
+                        </div>
+
+                        <div class="article-card">
+                            <div>
+                                <h3>It's time to step up</h3>
+                                <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
+                                    pharetra.
+                                </p>
+                                <a href="#">Read more ></a>
+                            </div>
+                            <img src="./img/article-2.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <div class="wrap-content">
-                <h2>The latest from SEEDA</h2>
-
-                <div class="article-card-wrapper">
-                    <div class="article-card">
-                        <div>
-                            <h3>Sustainable development</h3>
-                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada pharetra.
-                            </p>
-                            <a href="#">Read more ></a>
-                        </div>
-                        <img src="./img/article-1.jpg" alt="">
+                <div class="bg-dark-gray large-card team">
+                    <div class="text-white">
+                        <h3>Our team</h3>
+                        <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
+                            elementum
+                            nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
+                        <a class="button-nav" href="#">Meet our team ➞</a>
                     </div>
-
-                    <div class="article-card">
+                    <div class="members">
+                        <img src="./img/max.jpg" alt="">
+                        <img src="./img/dioni.jpg" alt="">
+                        <img src="/img/dima.jpg" alt="">
+                        <img src="./img/masha.jpg" alt="">
                         <div>
-                            <h3>It's time to step up</h3>
-                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada pharetra.
-                            </p>
-                            <a href="#">Read more ></a>
                         </div>
-                        <img src="./img/article-2.jpg" alt="">
                     </div>
                 </div>
             </div>
-        </section>
-
-        <div class="wrap-content">
-            <div class="bg-dark-gray large-card">
-                <div class="text-white">
-                    <h3>Our team</h3>
-                    <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis elementum
-                        nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
-                    <a class="button-nav" href="#">Meet our team ➞</a>
-                </div>
-                <div class="members">
-                    <img src="./img/max.jpg" alt="">
-                    <img src="./img/dioni.jpg" alt="">
-                    <img src="/img/dima.jpg" alt="">
-                    <img src="./img/masha.jpg" alt="">
-                    <div>
-                    </div>
-                </div>
 
 
     </main>
