Added about and contact pages

--- a/P2/index.html
+++ b/P2/index.html
@@ -21,8 +21,8 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="./pages/stories.html">Stories</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -152,7 +152,7 @@
 
                     <div class="bg-gray large-card">
                         <div class="text-black">
-                            <h3>View our latest works</h3>
+                            <h3>View our recent works</h3>
                             <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
                                 fermentum.
                                 Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
@@ -233,7 +233,7 @@
     </main>
 
     <footer>
-        <div class="wrap-footer">
+        <!-- <div class="wrap-footer">
             <div class="footer-links">
                 <a href="#">Portfolio</a>
                 <a href="#">Stories</a>
@@ -251,7 +251,7 @@
             <div class="footer-copyright">
                 © 2020 SEEDA Inc. All Rights Reserved.
             </div>
-        </div>
+        </div> -->
 
     </footer>
 
