--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -21,8 +21,8 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="./stories.html">Stories</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-        <div class="wrap-footer">
+        <!-- <div class="wrap-footer">
             <div class="footer-links">
                 <a href="#">Portfolio</a>
                 <a href="#">Stories</a>
@@ -89,7 +89,7 @@
             <div class="footer-copyright">
                 © 2020 SEEDA Inc. All Rights Reserved.
             </div>
-        </div>
+        </div> -->
 
     </footer>
 
