Footer, contact bar, icons

--- a/P2/index.html
+++ b/P2/index.html
@@ -51,31 +51,40 @@
 
         <section>
             <div class="wrap-content">
-                <h2>Engineering consulting and technical services</h2>
-            </div>
-            <div class="wrap-content two-column">
                 <div>
+                    <h2>Engineering consulting and technical services</h2>
 
-                    <div class="font-large">
-                        <p>Sit amet facilisis magna etiam. Sit amet nisl suscipit adipiscing. Donec et odio pellentesque
-                            diam
-                            volutpat commodo sed egestas egestas. Facilisis magna etiam tempor orci eu lobortis
-                            elementum
-                            nibh.
-                        </p>
+                    <div class="two-column">
+                        <div class="font-large">
+                            <p class="font-large">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consectetur facilis rerum
+                                saepe
+                                porro maxime placeat consequuntur quo cumque nisi, quae distinctio odit illo officiis
+                                iusto
+                                quisquam repudiandae, veritatis atque tempore. Recusandae sit cum nihil nam ducimus
+                                similique
+                                dicta doloremque?
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae consequatur
+                                provident, eum quis, blanditiis veniam sint minima molestias numquam cupiditate! Non
+                                illum doloribus facere? Cum facilis cupiditate mollitia minus! Lorem ipsum dolor sit
+                                amet consectetur adipisicing elit. Laboriosam.</p>
+                        </div>
+                        <img class="image-small" src="./img/perspective.jpg" alt="">
                     </div>
+
 
                     <div class="services-list">
                         <div class="service">
-                            <h3>Monitor effectiveness of workflows, processes and interfaces from conceptual, FEED,
-                                Detailed
-                                Design, Commissioning & Start-up</h3>
+                            <img src="./icons/monitor effectiveness.svg" alt="monitor icon">
+                            <h3>Monitor effectiveness of workflows, processes and interfaces </h3>
                             <p>Nec sagittis aliquam malesuada bibendum. Cursus metus aliquam eleifend mi in nulla. Ut
                                 tellus
                                 elementum sagittis vitae et leo duis.</p>
                         </div>
 
                         <div class="service">
+                            <img src="./icons/project planning.svg" alt="planning icon">
                             <h3>Project planning, management and execution support across project lifecycle</h3>
                             <p>Vestibulum morbi blandit cursus risus at ultrices mi tempus. Auctor elit sed vulputate
                                 mi. Eu
@@ -83,6 +92,7 @@
                         </div>
 
                         <div class="service">
+                            <img src="./icons/regulatory.svg" alt="compliance support icon">
                             <h3>Regulatory, Environmental submissions and compliance support</h3>
                             <p>Nec nam aliquam sem et tortor consequat id. Vel facilisis volutpat est velit egestas dui
                                 id
@@ -90,6 +100,7 @@
                         </div>
 
                         <div class="service">
+                            <img src="./icons/feasibility.svg" alt="report icon">
                             <h3>Feasibility studies and reports</h3>
                             <p>Elementum sagittis vitae et leo duis ut diam quam. Aliquam nulla facilisi cras fermentum
                                 odio
@@ -98,6 +109,7 @@
                         </div>
 
                         <div class="service">
+                            <img src="./icons/project surveillance.svg" alt="project audit icon">
                             <h3>Project surveillance and audit consultancy</h3>
                             <p>Posuere lorem ipsum dolor sit amet consectetur adipiscing. Pellentesque sit amet
                                 porttitor
@@ -106,153 +118,177 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <img src="./img/perspective.jpg" alt="">
-                </div>
             </div>
 
-            <section>
-                <div class="wrap-content">
-                    <h2>We assist you in the delivering sustainable projects</h2>
-                    <div class="two-column font-large">
+        </section>
+
+        <section>
+            <div class="wrap-content">
+                <h2>We assist you in the delivering sustainable projects</h2>
+                <div class="two-column font-large cards">
+                    <div>
+
                         <p>Aliquid consequuntur cupiditate esse amet consectetur tenetur elit. Consequuntur, ipsa. Totam
                             quisquam fugit
-                            amet consequatur sequi quos consequuntur officiis doloribus, culpa veritatis necessitatibus
-                            tempora
-                            ullam corrupti hic aliquid porro non. Lorem ipsum dolor sit amet consectetur, adipisicing
-                            elit.
-                            Cupiditate, veritatis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, voluptate. Assumenda illum a
-                            rem.
-                            Expedita, aspernatur molestias est voluptatum consequuntur, iste eaque esse cupiditate
-                            minima
-                            blanditiis aliquid minus sint nesciunt fugit doloremque eum ea. Tempora nesciunt atque
-                            dolorum
-                            alias
-                            aspernatur!</p>
-                        <p>Enim voluptatum ipsa vitae, amet tempora adipisicing elit. nobis veniam doloribus animi
-                            dolores
-                            quaerat dignissimos iusto impedit commodi, enim asperiores quae excepturi alias explicabo ut
-                            delectus numquam dolor, accusantium voluptate? Possimus aliquam quos ipsa cumque minima
-                            obcaecati
-                            vitae, ut voluptate amet accusantium aspernatur repudiandae, excepturi nobis, eaque quae
-                            quam
-                            mollitia?</p>
-                        <p>Augue condimentum interdum sit pellentesque consectetur adipisicing elit. Error, inventore
-                            quisquam eius incidunt illo
-                            quae, tenetur eum magni, ipsum laborum deleniti ad possimus vitae repudiandae cupiditate
-                            commodi!
-                            Perferendis voluptates culpa officia. Illo, in, deleniti cupiditate enim dicta tempora
-                            doloribus
-                            mollitia cum voluptatum, quisquam officia obcaecati incidunt est vitae voluptates.
-                            Voluptate!
-                        </p>
-                    </div>
+                            amet consequatur sequi quos consequuntur.</p>
+                        <a href="#"> <img src="./img/about.jpg" alt="" class="image-large">
+                            <h3>STRUNA: Engineering Dashboard</h3>
+                            <h4>Pellentesque aliquet metus ut neque rutrum Pellentesque aliquet metus ut neque rutrum.
+                            </h4>
+                        </a>
 
-
-                    <div class="bg-gray large-card">
-                        <div class="text-black">
-                            <h3>View our recent works</h3>
-                            <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
-                                fermentum.
-                                Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
-                                vitae
-                                sapien
-                                pellentesque. </p>
-                            <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
-                                tellus
-                                id
-                                interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
-                                mattis
-                                molestie a iaculis at erat pellentesque adipiscing.</p>
-
-                            <a href="#">Recent projects ></a>
-                        </div>
-                        <img src="./img/large-card.jpeg" alt="project site">
-                    </div>
-
-                </div>
-                </div>
-
-            </section>
-
-
-
-
-            <section>
-                <div class="wrap-content">
-                    <h2>The latest from SEEDA</h2>
-
-                    <div class="article-card-wrapper">
-                        <div class="article-card">
-                            <div>
-                                <h3>Hydraulic ram pump systems</h3>
-                                <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
-                                    pharetra.
-                                </p>
-                                <a href="./pages/hydraulic-ramp.html">Read more ></a>
-                            </div>
-                            <img src="./img/article-1.jpg" alt="">
-                        </div>
-
-                        <div class="article-card">
-                            <div>
-                                <h3>It's time to step up</h3>
-                                <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
-                                    pharetra.
-                                </p>
-                                <a href="#">Read more ></a>
-                            </div>
-                            <img src="./img/article-2.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <div class="wrap-content">
-                <div class="bg-dark-gray large-card team">
-                    <div class="text-white">
-                        <h3>Our team</h3>
-                        <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
-                            elementum
-                            nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
-                        <a class="button-nav" href="#">Meet our team ➞</a>
-                    </div>
-                    <div class="members">
-                        <img src="./img/max.jpg" alt="">
-                        <img src="./img/dioni.jpg" alt="">
-                        <img src="/img/dima.jpg" alt="">
-                        <img src="./img/masha.jpg" alt="">
                         <div>
+                            <a href="#">
+                                <img src="./img/project-4.jpg" alt="project site" class="image-very-large">
+                                <h3>Economic Water & Electricity</h3>
+                                <h4>Etiam aliquam ornare eleifend fusce cursus mi in ex dapibus tincidunt.</h4>
+                            </a>
                         </div>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./img/project-1.jpg" alt="project site" class="image-very-large">
+                            <h3>Re-engineering Canada </h3>
+                            <h4>Maecenas aliquam, nisl in faucibus sagittis, erat est pretium tortor, vulputate
+                                tristique
+                                lansa.</h4>
+                        </a>
+                        <div>
+                            <a href="#">
+                                <img src="./img/project-3.jpg" alt="project site" class="image-large">
+                                <h3>Sustainable Development</h3>
+                                <h4>Mauris pharetra augue tortor, a viverra nulla varius vel phasellus tempus orci sit
+                                    amet
+                                    mollis.</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="bg-gray large-card">
+                    <div class="text-black">
+                        <h3>View our recent works</h3>
+                        <p>Tincidunt augue interdum velit euismod in pellentesque massa. Augue neque gravida in
+                            fermentum.
+                            Suspendisse potenti nullam ac tortor vitae purus faucibus. Id venenatis a condimentum
+                            vitae
+                            sapien
+                            pellentesque. </p>
+                        <p>Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Urna duis convallis convallis
+                            tellus
+                            id
+                            interdum velit laoreet. Tellus at urna condimentum mattis pellentesque. Mauris cursus
+                            mattis
+                            molestie a iaculis at erat pellentesque adipiscing.</p>
+
+                        <a href="#">Recent projects ></a>
+                    </div>
+                    <img src="./img/large-card.jpeg" alt="project site">
+                </div>
+
+            </div>
+            </div>
+
+        </section>
+
+
+
+
+        <section>
+            <div class="wrap-content">
+                <h2>The latest from SEEDA</h2>
+
+                <div class="article-card-wrapper">
+                    <div class="article-card">
+                        <div>
+                            <h3>Hydraulic ram pump systems</h3>
+                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
+                                pharetra.
+                            </p>
+                            <a href="./pages/hydraulic-ramp.html">Read more ></a>
+                        </div>
+                        <img src="./img/article-1.jpg" alt="">
+                    </div>
+
+                    <div class="article-card">
+                        <div>
+                            <h3>It's time to step up</h3>
+                            <p>Porttitor interdum, turpis non volutpat ornare, justo nisi et enim malesuada
+                                pharetra.
+                            </p>
+                            <a href="#">Read more ></a>
+                        </div>
+                        <img src="./img/article-2.jpg" alt="">
                     </div>
                 </div>
             </div>
+        </section>
+
+        <div class="wrap-content">
+            <div class="bg-dark-gray large-card team">
+                <div class="text-white">
+                    <h3>Our team</h3>
+                    <p>Netus et malesuada fames ac turpis egestas sed tempus. Etiam tempor orci eu lobortis
+                        elementum
+                        nibh tellus molestie. Enim lobortis scelerisque fermentum dui faucibus.</p>
+                    <a class="button-nav" href="#">Meet our team ➞</a>
+                </div>
+                <div class="members">
+                    <img src="./img/max.jpg" alt="">
+                    <img src="./img/dioni.jpg" alt="">
+                    <img src="./img/dima.jpg" alt="">
+                    <img src="./img/masha.jpg" alt="">
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </main>
 
+    <div class="footer-contact">
+        <div class="wrap-content contact-wrapper">
+            <div class="contact-text">Stay in touch and hear the latest from us</div>
+            <div>
+                <form class="contact-form">
+                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
+                    <input type="submit" value="Submit" id="contact-submit">
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
-        <!-- <div class="wrap-footer">
-            <div class="footer-links">
-                <a href="#">Portfolio</a>
+        <div class="wrap-footer">
+            <div class="footer-list">
+                <img src="./img/logo.png" alt="SEEDA logo">
+                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+            </div>
+            <div class="footer-list">
+                <p>Info</p>
+                <a href="#">Projects</a>
+                <a href="#">Services</a>
                 <a href="#">Stories</a>
+                <a href="#">About</a>
+            </div>
+
+            <div class="footer-list">
+                <p>Company</p>
+                <a href="#">Portfolio</a>
                 <a href="#">Community</a>
                 <a href="#">Careers</a>
                 <a href="#">Privacy</a>
             </div>
 
-            <div class="footer-contact">
-                <a href="mailto:example@gmail.com">example@gmail.com</a>
+            <div class="footer-list">
+                <p>Contact Us</p>
+                <a href="mailto:example@gmail.com">example@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
-
-            <div class="footer-copyright">
-                © 2020 SEEDA Inc. All Rights Reserved.
-            </div>
-        </div> -->
-
+        </div>
     </footer>
 
 
