--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -33,33 +33,43 @@
         <div class="wrap-content">
             <h1>Stories</h1>
             <div class="two-column stories">
+
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-1.jpg" alt=""></a>
-                    <h3><a href="./hydraulic-ramp.html">Hydraulic ram pump systems</a></h3>
-                    <p>September 2020</p>
+                    <a href="./hydraulic-ramp.html"><img src="../img/article-1.jpg" alt="">
+                        <h3>Hydraulic ram pump systems</h3>
+                        <p>September 2020</p>
+                    </a>
                 </div>
+
                 <div class="story">
-                    <img src="../img/article-2.jpg" alt="">
-                    <h3>It's time to step up</h3>
-                    <p>July 2019</p>
+                    <a href="./hydraulic-ramp.html">
+                        <img src="../img/article-2.jpg" alt="">
+                        <h3>It's time to step up</h3>
+                        <p>July 2019</p>
+                    </a>
                 </div>
+
             </div>
+
 
             <div class="three-column stories">
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-3.jpg" alt=""></a>
-                    <h3><a href="./hydraulic-ramp.html">Nam vestibulum ultricies ligula</a></h3>
-                    <p>November 2019</p>
+                    <a href="./hydraulic-ramp.html"><img src="../img/article-3.jpg" alt="">
+                        <h3>Nam vestibulum ultricies ligula</h3>
+                        <p>November 2019</p>
+                    </a>
                 </div>
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-4.jpg" alt=""></a>
-                    <h3><a href="./hydraulic-ramp.html">Maecenas elementum accumsan lectus</a></h3>
-                    <p>January 2019</p>
+                    <a href="./hydraulic-ramp.html"><img src="../img/article-4.jpg" alt="">
+                        <h3>Maecenas elementum accumsan lectus</h3>
+                        <p>January 2019</p>
+                    </a>
                 </div>
                 <div class="story">
-                    <a href="./hydraulic-ramp.html"><img src="../img/article-5.jpg" alt=""></a>
-                    <h3><a href="./hydraulic-ramp.html">Nunc laoreet nibh nec sapien</a></h3>
-                    <p>October 2018</p>
+                    <a href="./hydraulic-ramp.html"><img src="../img/article-5.jpg" alt="">
+                        <h3>Nunc laoreet nibh nec sapien</h3>
+                        <p>October 2018</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -70,29 +80,48 @@
 
     </main>
 
+    <div class="footer-contact">
+        <div class="wrap-content contact-wrapper">
+            <div class="contact-text">Stay in touch and hear the latest from us</div>
+            <div>
+                <form class="contact-form">
+                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
+                    <input type="submit" value="Submit" id="contact-submit">
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
-        <!-- <div class="wrap-footer">
-            <div class="footer-links">
-                <a href="#">Portfolio</a>
+        <div class="wrap-footer">
+            <div class="footer-list">
+                <img src="../img/logo.png" alt="SEEDA logo">
+                <p class="regular">© 2020 SEEDA Inc. All Rights Reserved.</p>
+            </div>
+            <div class="footer-list">
+                <p>Info</p>
+                <a href="#">Projects</a>
+                <a href="#">Services</a>
                 <a href="#">Stories</a>
+                <a href="#">About</a>
+            </div>
+
+            <div class="footer-list">
+                <p>Company</p>
+                <a href="#">Portfolio</a>
                 <a href="#">Community</a>
                 <a href="#">Careers</a>
                 <a href="#">Privacy</a>
             </div>
 
-            <div class="footer-contact">
-                <a href="mailto:example@gmail.com">example@gmail.com</a>
+            <div class="footer-list">
+                <p>Contact Us</p>
+                <a href="mailto:example@gmail.com">example@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
-
-            <div class="footer-copyright">
-                © 2020 SEEDA Inc. All Rights Reserved.
-            </div>
-        </div> -->
-
+        </div>
     </footer>
-
 
 
 </body>
