Added repository links to footer

--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -189,7 +189,8 @@
                 <p>Company</p>
                 <a href="../pages/portfolio.html">Portfolio</a>
                 <a href="http://www.sfu.ca/~pdelfana/IAT339/Style%20Guide/">Style guide</a>
-                <a href="../pages/contact.html">Careers</a>
+                <a href="https://github.com/pdelfan/seeda-website">Site repository</a>
+                <a href="https://github.com/pdelfan/seeda-style-guide">Style guide repository</a>
             </div>
 
             <div class="footer-list">
